--- a/awards_template.qmd
+++ b/awards_template.qmd
@@ -127,21 +127,24 @@ If the awarded amount range is "normal," you can use the following code. Otherwi
 # This code creates a density plot of the awarded amounts. You can change the color of the lines by changing the hex color codes. You can also change the x and y axis labels by changing the text in the labs function.
 
 density <- awards_g |>
-  ggplot(aes(round(amount/1e3))) +
+  ggplot(aes(round(amount/1e3))) + #dividing by 1000
   geom_density() +
   geom_vline(xintercept = median(round(awards_g$amount/1e3)), color = "#450084") +
-  geom_vline(xintercept = mean(round(awards_g$amount/1e3)), color = "#CBB677") +
-  geom_text(aes(x = median(round(amount/1e3)), y = Inf, label = "Median"), color = "#450084", vjust=1,hjust=2.1,size=3,angle=90) +
-  geom_text(aes(x = mean(round(amount/1e3)), y = Inf, label = "Mean"), color = "#CBB677", vjust=1,hjust=2.1,size=3,angle=90) +
-  scale_x_continuous(breaks = c(seq(0, max(round(awards_g$amount/1e3)), by = 1000), max(round(awards_g$amount/1e3)))) +
+  geom_vline(xintercept = mean(round(awards_g$amount/1e3)), color = "#450084") +
+  geom_text(aes(x = median(round(amount/1e3)), y = Inf, label = "Median"), color = "#450084", vjust=1,hjust=2.1,size=5,angle=90) +
+  geom_text(aes(x = mean(round(amount/1e3)), y = Inf, label = "Mean"), color = "#450084", vjust=1,hjust=2.1,size=5,angle=90) +
+  scale_x_continuous(breaks = c(seq(0, max(round(awards_g$amount/1e3)), by = 1000))) +
   #coord_flip() +
   labs(x = "Awarded Amounts (in $1000)",
        y = "Density") +
-  theme_bw() +
+  theme_void() +
   theme(legend.position="none",
+        element_text(color = '#A4232B'),
         axis.text.y=element_blank(),
         axis.ticks.y=element_blank(),
-        axis.text.x = element_text(angle = 90, hjust = 1))
+        axis.text.x = element_text(angle = 90, hjust = 1),
+        axis.title.x = element_text(colour = "#A4232B"),
+  panel.background = element_rect(fill = "#F4EFE1"))
 
 density
 
@@ -162,16 +165,19 @@ density_log <- awards_g |>
   scale_x_continuous(trans='log2', 
                      breaks = c(2^seq(0, ceiling(log2(max(round(awards_g$amount/1e3))))), round(mean(round(awards_g$amount/1e3)),0), round(median(round(awards_g$amount/1e3)),0))) +
   geom_vline(xintercept = median(round(awards_g$amount/1e3)), color = "#450084") +
-  geom_vline(xintercept = mean(round(awards_g$amount/1e3)), color = "#CBB677") +
-  geom_text(aes(x = median(round(amount/1e3)), y = Inf, label = "Median"), color = "#450084", vjust=1,hjust=2.1,size=3,angle=90) +
-  geom_text(aes(x = mean(round(amount/1e3)), y = Inf, label = "Mean"), color = "#CBB677", vjust=1,hjust=2.1,size=3,angle=90) +
+  geom_vline(xintercept = mean(round(awards_g$amount/1e3)), color = "#450084") +
+  geom_text(aes(x = median(round(amount/1e3)), y = Inf, label = "Median"), color = "#450084", vjust=1,hjust=2.1,size=5,angle=90) +
+  geom_text(aes(x = mean(round(amount/1e3)), y = Inf, label = "Mean"), color = "#450084", vjust=1,hjust=2.1,size=5,angle=90) +
   labs(x = "Awarded Amounts in $1000 (log transformed)",
        y = "Density") +
-  theme_bw() +
+  theme_void() +
   theme(legend.position="none",
+        element_text(color = '#A4232B'),
         axis.text.y=element_blank(),
         axis.ticks.y=element_blank(),
-        axis.text.x = element_text(angle = 90, hjust = 1))
+        axis.text.x = element_text(angle = 90, hjust = 1),
+        axis.title.x = element_text(colour = "#A4232B"),
+  panel.background = element_rect(fill = "#F4EFE1"))
 
 
 density_log
@@ -195,7 +201,7 @@ awards_abstracts <- awards |> distinct(title, .keep_all = TRUE)
 
 
 
-custom_stopwords <- c("will", "can", "br", "s", "g", "e", "(anr).")
+custom_stopwords <- c("will", "can", "br", "s", "g", "e", "(anr).", "project", "research", "study", "results", "across")
 
 awards_abstracts$abstract <- awards_abstracts$abstract |> 
   str_squish() |>  # Remove extra whitespace
@@ -214,11 +220,21 @@ tdm <- TermDocumentMatrix(text_corpus) # Create a term-document matrix
 word_freqs <- sort(rowSums(as.matrix(tdm)), decreasing = TRUE) # Sort terms by frequency
 tdm_df <- data.frame(word = names(word_freqs), freq = word_freqs) # Create a data frame for the word frequencies
 
+set.seed(1234)
+
 freq <- ggplot(tdm_df[1:20,], aes(x = reorder(word, freq), y = freq)) + # Plot top 20 most frequent words
-  geom_bar(stat = "identity") +
+  geom_bar(stat = "identity", fill = "#450084") +
   coord_flip() + # Flip axes for better readability
   labs(x = "Terms", y = "Count", title = "Most Common Words in Abstracts") +
-  ggeasy::easy_center_title() # Center the title in the plot
+  ggeasy::easy_center_title() + # Center the title in the plot
+  theme_void() + # Remove background elements
+  theme(axis.text.y = element_text(size = 12),
+        axis.text.x = element_text(size = 12),
+        axis.title = element_text(size = 12),
+        element_text(color = '#A4232B'),
+        axis.title.x = element_text(colour = "#A4232B"),
+        axis.title.y = element_text(colour = "#A4232B"),
+        panel.background = element_rect(fill = "#F4EFE1")) 
 
 freq
 
@@ -248,6 +264,10 @@ top_terms <- topics |>
   ungroup() |>
   arrange(topic, -beta)
 
+# Define your custom color palette
+jmu_palette <- c("#450084", "#CBB677", "#5498B6", "#A4232B", "#5F791C")
+
+# Apply the custom color palette to your plot
 tm <- top_terms |>
   mutate(term = reorder_within(term, beta, topic)) |>
   ggplot(aes(beta, term, fill = factor(topic))) +
@@ -255,9 +275,15 @@ tm <- top_terms |>
   facet_wrap(~ topic, scales = "free") +
   scale_y_reordered() +
   scale_x_continuous(labels = scales::percent_format(accuracy = 0.1)) +
+  theme_void() +
+  scale_fill_manual(values = jmu_palette) +  # Add this line
   theme(axis.text.y = element_text(size = 12),
-      axis.text.x = element_text(size = 12),
-      axis.title = element_text(size = 12))
+        axis.text.x = element_text(size = 12),
+        axis.title = element_text(size = 12),
+        element_text(color = '#A4232B'),
+        axis.title.x = element_text(colour = "#A4232B"),
+        axis.title.y = element_text(colour = "#A4232B"),
+        panel.background = element_rect(fill = "#F4EFE1"))
 
 tm
 
@@ -284,6 +310,8 @@ bigram_counts <- bigrams |> count(word1, word2, sort = TRUE) # Count bigram freq
 bigram_graph <- bigram_counts |> filter(n >= 20) |> # Filter to include only bigrams with frequency > 40
   igraph::graph_from_data_frame() # Create a graph from the bigram data frame
 
+set.seed(123)
+
 bigram <- ggraph(bigram_graph, layout = "fr") + # Create a force-directed graph of bigrams
   geom_edge_link() +
   geom_node_point() +
@@ -292,6 +320,32 @@ bigram <- ggraph(bigram_graph, layout = "fr") + # Create a force-directed graph 
 bigram
 
 ggsave("figures/bigram.png", bigram, dpi = 300)
+```
+
+## Bigram Frequency in Descriptions
+
+```{r}
+
+bigram_freq <- ggplot(bigram_counts[1:20,], aes(x = reorder(paste0(word1, " ", word2), n), y = n)) + # Plot top 20 most frequent words
+  geom_bar(stat = "identity", fill = "#450084") +
+  coord_flip() + # Flip axes for better readability
+  labs(x = "Bigrams", y = "Count", title = "Most Common Bigrams in Abstracts") +
+  theme_void() + # Remove background elements
+  # make the font size bigger
+  theme(axis.text.y = element_text(size = 10),
+        axis.text.x = element_text(size = 10),
+        axis.title = element_text(size = 10),
+        element_text(color = '#A4232B'),
+        axis.title.x = element_text(colour = "#A4232B"),
+        axis.title.y = element_text(colour = "#A4232B")
+        ) +
+  #theme_void() + # Remove background elements
+  theme(panel.background = element_rect(fill = "#F4EFE1")) +
+  ggeasy::easy_center_title() # Center the title in the plot
+
+bigram_freq
+
+ggsave(here::here("figures/bigram_freq.png"), plot = bigram_freq, dpi = 300)
 ```
 
 # Abstract Takeaways
